--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,23 @@
   
     padding: 10px;
   }
+
+  .chamar{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px; 
+  
+    background-color: #0f8f03;
+    border-radius: 30px;
+  
+    padding: 10px;
+  }
   
   input[type=button] {
     border-radius: 20px;
     cursor: pointer;
     font-family: 'Montserrat', sans-serif;
-    height: 80px;
+    height: 50px;
     width: 80px;
   }
   
